# veridict

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README_ja.md
.github/workflows/: calibration.yml  ci.yml
benches/: matrix_bt.rs  metrics.rs  sprt_pentanomial.rs
docs/: metrics.md  metrics_ja.md  research-map.md  research-map_ja.md
examples/: chess_engine_draw_heavy.jsonl  chess_engine_paired_openings.jsonl  chess_engine_winloss.jsonl  chess_engine_with_crashes.jsonl  extraction_quality_paired.jsonl  llm_prompt_ab.jsonl  matches_head_to_head.jsonl  ocr_accuracy_paired.jsonl  paired_scores.csv  paired_scores.jsonl  pilot_scores.jsonl  ranking_elo.jsonl  status_failures.jsonl  winloss.jsonl
schemas/: compare-report.schema.json  input-record.schema.json  match-record.schema.json  matrix-report.schema.json  multi-report.schema.json  plan-report.schema.json  power-report.schema.json  power-sprt-report.schema.json  sprt-report.schema.json
src/: correction.rs  error.rs  input.rs  lib.rs  main.rs  matrix.rs  metrics.rs  plan.rs  power.rs  report.rs  sprt.rs  verdict.rs
src/metrics/: common.rs  elo.rs  mean_diff.rs  quantile_diff.rs  sign_test.rs  winrate.rs
src/stats/: bootstrap.rs  bradley_terry.rs  elo.rs  exact.rs  jeffreys.rs  mod.rs  pentanomial_sprt.rs  sprt.rs  trinomial_sprt.rs  wilson.rs
tests/: calibration.rs  cli_compare.rs  golden_compare.rs  golden_matrix.rs  golden_plan.rs  metrics_properties.rs
tests/calibration/: binomial_coverage.rs  bootstrap_coverage.rs  matrix_bt_recovery.rs  power_calibration.rs  (+5 more)
(+12 files in other folders)
