[package]
name = "veridict"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.3.1"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
