[package]
name = "veridict"
version = "0.5.0"
edition = "2024"
description = "Statistical regression gate for comparing candidate vs baseline results (win-rate, Elo, SPRT, bootstrap CI)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/veridict"
readme = "README.md"
keywords = ["statistics", "testing", "cli", "regression", "elo"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.3.1"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
statrs = { version = "0.18", default-features = false }
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.2"
criterion = "0.5"
predicates = "3.1.4"
proptest = "1"

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "matrix_bt"
harness = false

[[bench]]
name = "sprt_pentanomial"
harness = false
